| Summary: | ASTERISK-29011: chan_sip: ToHost property not cleared on reload | ||
| Reporter: | Dennis (dbuteyn) | Labels: | |
| Date Opened: | 2020-07-27 04:05:22 | Date Closed: | 2020-08-18 10:51:09 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 13.34.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Setting the {{host}} parameter for a peer and subsequently removing this parameter in {{sip.conf}}, followed by a core reload will not clear the ToHost property of that peer. This results in Asterisk sending invites with old value.
Reproduce: # Configure SIP peer with {{host = cnn.com}} in {{sip.conf}}. # Perform core reload, peer will now have ToHost set to cnn.com. # Reconfigure same SIP peer with {{host = dynamic}} in {{sip.conf}}. # Register peer to this trunk. # Asterisk will continue to use ToHost with cnn.com and send invites with sip:12345@cnn.com | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-07-27 04:05:23.379-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-08-18 10:51:10.313-0500 Change 14766 merged by Friendly Automation: chan_sip: Clear ToHost property on peer when changing to dynamic host [https://gerrit.asterisk.org/c/asterisk/+/14766|https://gerrit.asterisk.org/c/asterisk/+/14766] By: Friendly Automation (friendly-automation) 2020-08-19 07:29:31.097-0500 Change 14697 merged by George Joseph: chan_sip: Clear ToHost property on peer when changing to dynamic host [https://gerrit.asterisk.org/c/asterisk/+/14697|https://gerrit.asterisk.org/c/asterisk/+/14697] By: Friendly Automation (friendly-automation) 2020-08-19 07:29:45.745-0500 Change 14765 merged by George Joseph: chan_sip: Clear ToHost property on peer when changing to dynamic host [https://gerrit.asterisk.org/c/asterisk/+/14765|https://gerrit.asterisk.org/c/asterisk/+/14765] By: Friendly Automation (friendly-automation) 2020-08-19 07:30:00.815-0500 Change 14767 merged by George Joseph: chan_sip: Clear ToHost property on peer when changing to dynamic host [https://gerrit.asterisk.org/c/asterisk/+/14767|https://gerrit.asterisk.org/c/asterisk/+/14767] By: Friendly Automation (friendly-automation) 2020-08-19 07:30:14.621-0500 Change 14768 merged by George Joseph: chan_sip: Clear ToHost property on peer when changing to dynamic host [https://gerrit.asterisk.org/c/asterisk/+/14768|https://gerrit.asterisk.org/c/asterisk/+/14768] | ||